--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "core-util-is": "1.0.3",
         "debug": "3.1.0",
         "esm": "3.0.34",
+        "human-id": "3.0.0",
         "human-readable-ids": "1.0.3",
         "ipaddr.js": "2.0.1",
         "koa": "2.5.1",
